--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -19,15 +19,21 @@
 .navbar a:hover {
     color: white;
 }
+
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
 .footer {
     color: darkgoldenrod;
     background: black;
-    position: fixed;
-    left: 0;
+    position: static;
     bottom: 0;
     width: 100%;
     text-align: center;
-    padding: 10px 0;
+    padding: 1px 0;
 
 }
 .btn-outline-success {
@@ -74,7 +80,7 @@
     border: 10px solid black;
     border-radius: 10px;
     font-size: 20px;
-    transform: scale(1.3);
+    transform: scale(1.1);
 }
 
 /* Categories */
@@ -82,77 +88,3 @@
     color: black;
     background: darkgoldenrod;
 }
-
-
-
-/*
-!* Селектор по ID *!
-#main {
-    padding: 20px;
-    background-color: #ff9;
-}
-
-!* Селектор типов *!
-h1 {
-    color: green;
-    text-align: center;
-}
-
-p {
-    margin: 10px 0;
-}
-
-.mc{
-    color: brown;
-    font-weight: bold;
-    font-style: italic;
-    text-align: center;
-    text-decoration-line: underline;
-    text-transform: uppercase;
-    width: 300px;
-}
-
-!* Селектор классов *!
-.photo {
-    width: 100%;
-    max-width: 400px;
-    border-radius: 555px;
-    text-align: center;
-    margin: 10px ;
-}
-
-.btn {
-    padding: 10px 20px;
-    border: none;
-    cursor: pointer;
-    margin: 5px;
-}
-
-.btn.primary {
-    background-color: blue;
-    color: white;
-}
-
-.btn.primary:hover {
-    background-color: red;
-}
-
-.btn.secondary {
-    background-color: gray;
-    color: white;
-}
-
-.btn.secondary:hover {
-    background-color: red;
-}
-
-!* Комбинаторы *!
-#main ul > li {
-    list-style-type: circle;
-}
-
-h1 + h2 {
-    color: darkgreen;
-}
-*/
-
