--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -4,10 +4,30 @@
     padding: 0;
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%; /* Высота страницы - 100% окна */
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+    padding: 20px;
+    background-color: #f5f5f5;
+    box-sizing: border-box;
+}
+
 /* Contact */
 .contactText {
     font-size: 26px;
 }
+
 .contactTextN {
     font-size: 18px;
 }
@@ -16,31 +36,40 @@
 .navbar a {
     color: darkgoldenrod;
 }
+
 .navbar a:hover {
-    color: white;
+    color: black;
+    background: darkgoldenrod;
+    height: 100%;
+    display: flex;
+    border-radius: 10px;
+
 }
 
-html, body {
-    height: 100%;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
+footer .container {
+    max-width: 1200px;
+    margin: 0 auto;
 }
+
 .footer {
     color: darkgoldenrod;
     background: black;
-    position: static;
-    bottom: 0;
-    width: 100%;
     text-align: center;
-    padding: 1px 0;
-
+    padding: 10px 0;
+    width: 100%;
+    margin-top: auto;
 }
-.btn-outline-success {
+
+.footerLinks {
+    color: darkgoldenrod;
+}
+
+/* search button */
+.btn {
     color: darkgoldenrod;
     border: 2px solid darkgoldenrod;
 }
-.btn-outline-success:hover {
+.btn:hover {
     color: black;
     border: 2px solid black;
     background: darkgoldenrod;
@@ -50,23 +79,29 @@ html, body {
 .form-control {
     border: 2px solid darkgoldenrod;
 }
+
 .form-control:hover {
     border: 4px solid darkgoldenrod;
 }
+
 .userText {
     color: black;
     font-size: 40px;
     text-align: center;
 }
+
 .userEmail {
     font-size: 20px;
 }
+
 .userPhoto {
     border-radius: 70%;
     height: 300px;
     width: 300px;
     padding: 30px;
 }
+
+/* logout, add to basket */
 .logout {
     color: black;
     background: darkgoldenrod;
@@ -83,8 +118,33 @@ html, body {
     transform: scale(1.1);
 }
 
-/* Categories */
-.dropdown-item:hover{
+/* Categories spisok */
+.dropdown-item:hover {
     color: black;
     background: darkgoldenrod;
+}
+
+/* nadpis' categorii*/
+.carType {
+    width: 100%;
+    padding-left: 50px;
+    color: darkgoldenrod;
+    background: black;
+    font-size: 50px;
+}
+
+/* card avto */
+.mb-3 {
+    width: 1500px;
+    max-height: 200px;
+    min-height: 200px;
+    display: flex;
+    border: 1px solid grey;
+    border-radius: 10px;
+}
+/* kartinka avto */
+.mb-3 img {
+    width: 60%;
+    height: 180px;
+    object-fit: cover;
 }
