--- a/src/main/resources/templates/intershop.html
+++ b/src/main/resources/templates/intershop.html
@@ -60,7 +60,7 @@
             </ul>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn" type="submit">Search</button>
             </form>
         </div>
     </div>
@@ -84,20 +84,11 @@
             </div>
             <div class="col-lg-4 col-md-12 mb-4">
                 <h5>Our social media</h5>
-                <ul class="list-unstyled">
-                    <li>
-                        <a href="https://www.facebook.com/" target="_blank" class="social-link">
-                            <i class="bi bi-facebook"></i> Facebook</a>
-                    </li>
-                    <li>
-                        <a href="https://www.instagram.com/" target="_blank" class="social-link">
-                            <i class="bi bi-instagram"></i> Instagram</a>
-                    </li>
-                    <li>
-                        <a href="https://www.youtube.com/" target="_blank" class="social-link">
-                            <i class="bi bi-youtube"></i> YouTube</a>
-                    </li>
-                </ul>
+                <a href="https://www.facebook.com/" target="_blank" class="footerLinks"><i class="bi bi-facebook"></i>
+                    Facebook</a><br>
+                <a href="https://www.instagram.com/" target="_blank" class="footerLinks"><i class="bi bi-instagram"></i>
+                    Instagram</a><br>
+                <a href="https://www.youtube.com/" target="_blank" class="footerLinks"><i class="bi bi-youtube"></i> YouTube</a>
             </div>
         </div>
 
