--- a/src/main/resources/templates/intershop.html
+++ b/src/main/resources/templates/intershop.html
@@ -24,7 +24,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-black">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">
-            <img src="apple-touch-icon.png" alt="IShop" width="80" style="margin-left: 30px ; margin-right: 30px">
+            <img src="apple-touch-icon.png" alt="IShop" width="80" style="margin-left: 30px ; margin-right: 30px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,6 +66,53 @@
     </div>
 </nav>
 
+<div>
+    <img src="intershopLogo.png" class="imageHome"><br><br>
+</div>
+
+
+<!-- Card https://getbootstrap.com/docs/5.3/components/card/-->
+
+<div class="row row-cols-1 row-cols-md-3 g-4" style="margin-bottom: 50px">
+    <div class="col">
+        <div class="card h-100">
+            <div class="card-body">
+                <i class="bi bi-cart homeCard-icon"></i>
+                <h5 class="card-title" style="text-align: center; font-size: 30px">Basket</h5><br>
+                <p class="card-text" style="text-align: center; font-size: 20px">Your Basket with products You want to
+                    buy</p>
+            </div>
+            <a href="myPage.html">
+                <button class="logout" style="width: 50% ; margin-left: 25%; margin-bottom: 10px">Go!</button>
+            </a></div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+            <div class="card-body">
+                <i class="bi bi-person homeCard-icon"></i>
+                <h5 class="card-title" style="text-align: center; font-size: 30px">My Page</h5><br>
+                <p class="card-text" style="text-align: center; font-size: 20px">Go on your account page!</p>
+            </div>
+            <a href="myPage.html">
+                <button class="logout" style="width: 50% ; margin-left: 25%; margin-bottom: 10px">Go!</button>
+            </a>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card h-100">
+            <div class="card-body">
+                <i class="bi bi-telephone homeCard-icon"></i>
+                <h5 class="card-title" style="text-align: center; font-size: 30px">Contact Us!</h5><br>
+                <p class="card-text" style="text-align: center; font-size: 20px">Hello! Welcome to intershop.ua! If you
+                    need a help, please contact us.</p>
+            </div>
+            <a href="contact.html">
+                <button class="logout" style="width: 50% ; margin-left: 25%; margin-bottom: 10px">Go!</button>
+            </a></div>
+    </div>
+</div>
+
+
 <footer class="footer">
     <div class="container p-4">
         <div class="row">
@@ -88,7 +135,8 @@
                     Facebook</a><br>
                 <a href="https://www.instagram.com/" target="_blank" class="footerLinks"><i class="bi bi-instagram"></i>
                     Instagram</a><br>
-                <a href="https://www.youtube.com/" target="_blank" class="footerLinks"><i class="bi bi-youtube"></i> YouTube</a>
+                <a href="https://www.youtube.com/" target="_blank" class="footerLinks"><i class="bi bi-youtube"></i>
+                    YouTube</a>
             </div>
         </div>
 
